Added line numbers to code

--- a/src/default.hbs
+++ b/src/default.hbs
@@ -35,6 +35,7 @@
     <link href="/assets/_components/font-awesome/css/font-awesome.css">
     <link href="/assets/_components/prism/themes/prism.css">
     <link href="/assets/_components/prism/plugins/autolinker/prism-autolinker.css">
+    <link href="/assets/_components/prism/plugins/line-numbers/prism-line-numbers.css">
     <link href="/assets/_components/pace/themes/pace-theme-minimal.css">
     <link href="/assets/css/style.css">
     <!-- endbuild -->
@@ -110,6 +111,9 @@
     <script src="/assets/_components/prism/components/prism-scss.js"></script>
     <script src="/assets/_components/prism/components/prism-sql.js"></script>
     <script src="/assets/_components/prism/plugins/autolinker/prism-autolinker.js"></script>
+    <script src="/assets/js/prism/plugins/remove-last-line/remove-last-line.js"></script>
+    <script src="/assets/js/prism/plugins/force-line-numbers/force-line-numbers.js"></script>
+    <script src="/assets/_components/prism/plugins/line-numbers/prism-line-numbers.js"></script>
 
     <script src="/assets/_components/jquery-pjax/jquery.pjax.js"></script>
     <script src="/assets/js/drawer.js"></script>
