--- a/partials/drawer.hbs
+++ b/partials/drawer.hbs
@@ -6,4 +6,8 @@
       {{> custom/navigation this}}
     </ul>
   </div>
+
+  <div class="pixel-pattern sch-pixel-pattern-2">
+    <div class="pixel-pattern-pixel"></div>
+  </div>
 </nav>
