--- a/src/default.hbs
+++ b/src/default.hbs
@@ -38,6 +38,7 @@
     <link href="/assets/_components/prism/plugins/line-numbers/prism-line-numbers.css">
     <link href="/assets/_components/pace/themes/pace-theme-minimal.css">
     <link href="/assets/css/style.css">
+    <link href="/assets/css/pixelart.css">
     <!-- endbuild -->
 
     <script type="text/javascript">
