--- a/default.hbs
+++ b/default.hbs
@@ -60,9 +60,8 @@
   </head>
   <body class="{{body_class}}">
 
-    {{> drawer this}}
+    <a class="drawer-button" href="/"><i class="fa fa-home"></i></a>
 
-    <div class="drawer-overlay"></div>
     <main id="container" role="main" class="container">
       <div class="surface">
         <div class="surface-container">
