--- a/src/post.hbs
+++ b/src/post.hbs
@@ -39,7 +39,7 @@
                 <a href="{{author.website}}" class="post-author-name">
                   {{author.name}}
                 </a>
-                <p class="post-author-bio">{{author.bio}}</p>
+                <p class="post-author-bio">{{showBio author.bio}}</p>
               </div>
             </div>
           </aside>
@@ -58,7 +58,7 @@
                 <a href="{{author.website}}" itemprop="url" class="post-author-name">
                   <span itemprop="name">{{author.name}}</span>
                 </a>
-                <p itemprop="description" class="post-author-bio">{{author.bio}}</p>
+                <p itemprop="description" class="post-author-bio">{{showBio author.bio}}</p>
                 {{#if author.location}}
                   <p class="post-author-location">{{author.location}}</p>
                 {{/if}}
