Add android animation

--- a/default.hbs
+++ b/default.hbs
@@ -96,5 +96,7 @@
         }());
       }
     </script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js"></script>
   </body>
 </html>
