--- a/post.hbs
+++ b/post.hbs
@@ -91,6 +91,21 @@
   </div>
 </section>
 
+<div class="android" data-start="opacity: 0; bottom: -101em;" data-500-start="opacity: 0; bottom: -101em;" data-end="opacity: 0.3; bottom: 0">
+    <div class="head">
+        <div class="l_ant"></div>
+        <div class="r_ant"></div>
+        <div class="l_eye"></div>
+        <div class="r_eye"></div>
+    </div>
+    <div class="body">
+        <div class="l_arm" data-150-end="transform: rotate(30deg) translate(-4px, 0)" data-end="transform: rotate(0deg) translate(0, 0)"></div>
+        <div class="r_arm" data-150-end="transform: rotate(-30deg) translate(4px, 0)" data-end="transform: rotate(0deg) translate(0, 0)"></div>
+        <div class="l_leg"></div>
+        <div class="r_leg"></div>
+    </div>
+</div>
+
 <script type="text/javascript">
   if(GHOSTIUM.haveDisqus) {
     {{#post}}
