--- a/src/assets/_scss/style.scss
+++ b/src/assets/_scss/style.scss
@@ -17,6 +17,7 @@
 // OBJECTS & MODULES
 //----------------------------------*/
 
+@import "modules/_android.scss";
 @import "modules/_buttons.scss";
 @import "modules/_figures.scss";
 @import "modules/_forms.scss";
